--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@ aquajvalin@gmail.com @ Me'n'Myself
 *require pages
 *require font-awesome-sprockets
 *require font-awesome
-*
+*= require_self
 */
 
 @import "compass/reset";
